comit Practice-CSS

--- a/Practice-CSS/2 Part_Selectors/about_buttons.html
+++ b/Practice-CSS/2 Part_Selectors/about_buttons.html
@@ -23,15 +23,16 @@
                 padding-bottom:20px;
             }
         </style>
+        <link href="../1 Part_Styles creation/Style.css" type="text/css" rel="stylesheet">
     </head>
-    <body>
+    <body id="info">
         <h1>Несколько историй</h1>
         <a href = "#history_1">История первая</a><br />
         <a href = "#history_2">История вторая</a><br />
 
         <div>
         <h2 id="history_1">История первая</h2>
-        <p>Давняя и неизменная часть истории костюма - <strong>пуговица</strong> - это и "скромная статистка", и яркая деталь на 
+        <p class = "interesting">Давняя и неизменная часть истории костюма - <strong>пуговица</strong> - это и "скромная статистка", и яркая деталь на 
         страницах многих произведений художественной литературы, отражающая не только веяния моды, но и 
         социальное положение, вкус, воспитание.</p>
 
@@ -155,9 +156,9 @@
         который при  движении издавал  звук, похожий на звон бубенца.</p>
         <p>За  столетия каких только пуговиц не было. Многие из них стали произведением искусств и сейчас 
         хранятся в музеях. А современных галантерейных магазинах в продаже  потрясающий выбор пуговиц!</p>
-
+        
         <h3>Это интересно</h3>
-        <div class="interesting"></div>
+        <div class="interesting">
         <p>На мужской одежде пуговицы расположены справа, а на женской слева. Считается, что во времена 
         внедрения пуговиц мужчины одевались сами, а женщин одевали служанки – поэтому для них пуговицы 
         пришивали в зеркальном отражении.</p>
