--- a/Practice-CSS/1 Part_Styles creation/Index.html
+++ b/Practice-CSS/1 Part_Styles creation/Index.html
@@ -30,7 +30,7 @@
         <p>Коллекционирование пуговиц называется филобутонистика
             <dfn title = "Коллекционирование пуговиц">филобутонистика</dfn>.</p>
 
-        <p class=>Знаете ли вы, что Первая Мировая война случилась из-за плохо расстегивающихся пуговиц? 
+        <p class="info">Знаете ли вы, что Первая Мировая война случилась из-за плохо расстегивающихся пуговиц? 
             <blockquote> <cite>"http://glamik.ru/blog/2012-03-07-640"></cite>Эрцгерцог Франц-Фердинанд умер после выстрела только из-за того, что на расстегивание 
         всех его пуговиц для обработки раны потребовалось слишком много времени.</blockquote></p>
 
